--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "my project React and Nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node backend/dist/server",
+    "server": "nodemon backend/dist/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"tsc -w\" \"npm run server\" \"npm run client\"",
+    "data:import": "node backend/dist/seeder",
+    "data:destroy": "node backend/dist/seeder -d",
+    "data:download": "node backend/dist/data/crawl/index"
   },
   "repository": {
     "type": "git",
@@ -15,5 +22,22 @@
   "bugs": {
     "url": "https://github.com/MinhGiang241/Tekshop/issues"
   },
-  "homepage": "https://github.com/MinhGiang241/Tekshop#readme"
+  "homepage": "https://github.com/MinhGiang241/Tekshop#readme",
+  "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "install": "^0.13.0",
+    "mongoose": "^5.11.15",
+    "npm": "^7.5.4"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.25",
+    "concurrently": "^5.3.0",
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.7"
+  }
 }
