--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "react-material-ui-carousel": "^2.2.0",
+    "@material-ui/lab": "^4.0.0-alpha.57"
   },
   "scripts": {
     "start": "react-scripts start",
