--- a/package.json
+++ b/package.json
@@ -28,14 +28,22 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "npm": "^7.5.4"
+    "nodemailer": "^6.5.0",
+    "npm": "^7.5.4",
+    "numeral": "^2.0.6",
+    "react-material-ui-carousel": "^2.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.25",
+    "@types/nodemailer": "^6.4.0",
+    "@types/numeral": "^2.0.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.7"
