--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -17,6 +18,8 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-image-file-resizer": "^0.4.2",
+    "react-material-ui-carousel": "^2.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -24,9 +27,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4",
-    "react-material-ui-carousel": "^2.2.0",
-    "@material-ui/lab": "^4.0.0-alpha.57"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
