--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/MinhGiang241/Tekshop#readme",
   "dependencies": {
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/multer": "^1.4.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -32,10 +33,12 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
+    "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "npm": "^7.5.4",
     "numeral": "^2.0.6",
-    "react-material-ui-carousel": "^2.2.0"
+    "react-material-ui-carousel": "^2.2.0",
+    "sharp": "^0.27.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -44,6 +47,7 @@
     "@types/node": "^14.14.25",
     "@types/nodemailer": "^6.4.0",
     "@types/numeral": "^2.0.0",
+    "@types/sharp": "^0.27.1",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.7"
