--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,19 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gallery-carousel": "^0.1.0",
+    "react-id-swiper": "^4.0.0",
     "react-image-file-resizer": "^0.4.2",
     "react-material-ui-carousel": "^2.2.0",
     "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-swipeable-views": "^0.13.9",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "swiper": "^6.5.3",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -57,6 +62,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-swipeable-views": "^0.13.0",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0"
   }
