--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
+    "node-sass": "^5.0.0",
     "nodemailer": "^6.5.0",
     "npm": "^7.5.4",
     "numeral": "^2.0.6",
+    "object-assign": "^4.1.1",
     "react-material-ui-carousel": "^2.2.0",
-    "sharp": "^0.27.2"
+    "sharp": "^0.27.2",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -47,6 +50,7 @@
     "@types/node": "^14.14.25",
     "@types/nodemailer": "^6.4.0",
     "@types/numeral": "^2.0.0",
+    "@types/object-assign": "^4.0.30",
     "@types/sharp": "^0.27.1",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
